OO-3516: implement administrator, curriculum manager and principal roles for curriculum management site